bug in locking mechanism and introduced options for controlling when new jobs are executed (before or after a job has been killed)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,12 @@ set(MYSQL_SOURCES_PATH "/home/adrpar/Downloads/mariadb-10.0.8")
 ###########################################################
 #set(MARIADB 1)
 
+###########################################################
+#### uncomment this, if you want the queue to submit the next
+#### job BEFORE a job has been successfully killed
+###########################################################
+#add_definitions(-D__QQUEUE_NOWAIT_ON_KILL_TO_JOBRESTART__)
+
 if(MYSQL_PATH)
     set(MYSQL_CONFIG "${MYSQL_PATH}/bin/mysql_config")
 else()
